# price-optimization-using-brightdata

./: .env.example  .gitignore  FEATURES.md  LICENSE  QUICK_START.md  README.md  price_monitor.sh  pyproject.toml  sample_keywords.txt
dashboard/: README.md  app.py  cli.py
dashboard/templates/: dashboard.html  dashboard_new.html  dashboard_old.html
dashboard/templates/partials/: ai_insights.html  ai_insights_new.html  ai_insights_old.html  change_detail.html  changes_table_fixed.html  keyword_detail.html  products_list.html  results_table.html
src/: __init__.py  batch_scraper.py  canonical_products.py  canonical_products_simple.py  change_detector.py  discovery_pipeline.py  models.py  monitoring_pipeline.py  tracking_scraper.py  utils.py
src/brightdata/: __init__.py  amazon_jp.py  base.py  connection.py  mercari.py  rakuten.py  scraper.py  yahoo_shopping.py
src/cli/: __init__.py  import_batch_results.py  monitor_canonical.py
